comment h5&add i tag in about

--- a/About.html
+++ b/About.html
@@ -62,6 +62,7 @@
       <i class="fa-brands fa-facebook"></i>
       <i class="fa-brands fa-square-instagram"></i>
       <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-twitter"></i>
       <h5>Made with <i class="fa-solid fa-heart"></i> by Moka</h5>
     </section>
   </body>
