--- a/blog.html
+++ b/blog.html
@@ -149,7 +149,7 @@
       </p>
       <i class="fa-brands fa-facebook"></i>
       <i class="fa-brands fa-square-instagram"></i>
-      <i class="fa-brands fa-twitter"></i>
+      <!-- <i class="fa-brands fa-twitter"></i> -->
       <h5>Made with <i class="fa-solid fa-heart"></i> by Moka</h5>
     </section>
   </body>
